--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -15,6 +15,7 @@
 
     <body>
         <h1>Welcome to the TejRaj</h1>
+        <h2>Tejas Gaikwd</h2>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
